--- a/game/index.css
+++ b/game/index.css
@@ -14,3 +14,12 @@ td{
 table, th, td{
     border: 1px solid black;
 }
+
+.switch{
+    float: right;
+}
+
+#play_ai{
+    height: 100px;
+    width: 100px;
+}
